server/server.log

> server@1.0.0 start
> npx ts-node src/index.ts

/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/index.ts(4,18): error TS2307: Cannot find module 'cors' or its corresponding type declarations.

    at createTSError (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1838:10
    at Object.require.extensions.<computed> [as .ts] (/home/andrea/Desktop/uni/tecnologieWeb/progetto/ArtAround/server/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2307 ]
}
